--- a/appsettings_local.json
+++ b/appsettings_local.json
@@ -10,5 +10,6 @@
     3
   ],
   "square_of_root_num_of_frames": 4,
-  "preprocessed_directory": "C:/workspace/deepfake-detection-challenge/train_sample_images"
+  "preprocessed_directory": "C:/workspace/deepfake-detection-challenge/train_sample_images",
+  "test_directory": "C:/workspace/deepfake-detection-challenge/train_sample_images"
 }
