--- a/appsettings_real.json
+++ b/appsettings_real.json
@@ -1,8 +1,56 @@
 {
-  "origin_home_directory": "C:/workspace/deepfake-detection-challenge",
+  "origin_home_directory": "C:/workspace/deepfake-detection-challenge/full_dataset",
   "partitioned_directories": [
     "dfdc_train_part_0",
-    "dfdc_train_part_1"
+    "dfdc_train_part_1",
+    "dfdc_train_part_2",
+    "dfdc_train_part_3",
+    "dfdc_train_part_4",
+    "dfdc_train_part_5",
+    "dfdc_train_part_6",
+    "dfdc_train_part_7",
+    "dfdc_train_part_8",
+    "dfdc_train_part_9",
+    "dfdc_train_part_10",
+    "dfdc_train_part_11",
+    "dfdc_train_part_12",
+    "dfdc_train_part_13",
+    "dfdc_train_part_14",
+    "dfdc_train_part_15",
+    "dfdc_train_part_16",
+    "dfdc_train_part_17",
+    "dfdc_train_part_18",
+    "dfdc_train_part_19",
+    "dfdc_train_part_20",
+    "dfdc_train_part_21",
+    "dfdc_train_part_22",
+    "dfdc_train_part_23",
+    "dfdc_train_part_24",
+    "dfdc_train_part_25",
+    "dfdc_train_part_26",
+    "dfdc_train_part_27",
+    "dfdc_train_part_28",
+    "dfdc_train_part_29",
+    "dfdc_train_part_30",
+    "dfdc_train_part_31",
+    "dfdc_train_part_32",
+    "dfdc_train_part_33",
+    "dfdc_train_part_34",
+    "dfdc_train_part_35",
+    "dfdc_train_part_36",
+    "dfdc_train_part_37",
+    "dfdc_train_part_38",
+    "dfdc_train_part_39",
+    "dfdc_train_part_40",
+    "dfdc_train_part_41",
+    "dfdc_train_part_42",
+    "dfdc_train_part_43",
+    "dfdc_train_part_44",
+    "dfdc_train_part_45",
+    "dfdc_train_part_46",
+    "dfdc_train_part_47",
+    "dfdc_train_part_48",
+    "dfdc_train_part_49"
   ],
   "workers_thread_pool_size": 10,
   "frame_shape": [
@@ -11,5 +59,6 @@
     3
   ],
   "square_of_root_num_of_frames": 4,
-  "preprocessed_directory": "C:/workspace/deepfake-detection-challenge/dfdc_train_images"
+  "preprocessed_directory": "C:/workspace/deepfake-detection-challenge/dfdc_train_images",
+  "test_directory": "C:/workspace/deepfake-detection-challenge/train_sample_images_with_mediapipe"
 }
