--- a/appsettings_local.json
+++ b/appsettings_local.json
@@ -1,5 +1,5 @@
 {
-  "origin_home_directory": "C:/workspace/deepfake-detection-challenge",
+  "origin_home_directory": "C:\\workspace\\deepfake-detection-challenge",
   "partitioned_directories": [
     "train_sample_videos"
   ],
@@ -10,6 +10,6 @@
     3
   ],
   "square_of_root_num_of_frames": 4,
-  "preprocessed_directory": "C:/workspace/deepfake-detection-challenge/train_sample_images_with_mediapipe",
-  "test_directory": "C:/workspace/deepfake-detection-challenge/train_sample_images_with_fullscreen"
+  "preprocessed_directory": "C:\\workspace\\deepfake-detection-challenge\\train_sample_images_with_mer",
+  "test_directory": "C:\\workspace\\deepfake-detection-challenge\\train_sample_images_with_fullscreen"
 }
